# playing-arround-flask

./: .editorconfig  .gitignore  Account_cf_template.json  README.md  localstack-infra.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  swagger.yml
app/: wsgi.py
app/account/: models.py  serializers.py  views.py
app/core/: decorators.py
app/core/aws/: dynamodb.py
sample.vscode/: launch.json  settings.json
src/account/: wsgi.py
src/account/account/: models.py  serializers.py  views.py
src/account/core/: decorators.py  hooks.py
src/account/core/aws/: dynamodb.py
src/account/health_check/: serializers.py  views.py
tests/: account_views_test.py  conftest.py  core_aws_dynamodb_test.py
tests/account_models/: account_model_test.py  transaction_model_test.py
tests/account_views/: account_balance_test.py  account_deposit_test.py  account_withdraw_test.py  block_account_test.py  create_account_test.py
